 - Limit amount of data sent at one time for slow networks/remotes
 - Many updates to the tests
 - Better logs of some error conditions
 - Build locally if it is likely that there will not be more compiles
 - Support adding gcc and clang to the same environment
 - Better handling of icerun
 - Cygwin now works as a client
 - Don't expose Host endianness to network
 - General code cleanup
 
1.1
 - revert "Add load control for preprocessing"
 - better handle clang arugments with spaces
 - remove "crashme" command from scheduler
 - better logging around exception 30
 
1.1rc3
 - Fix broken pipe race condition
 - Better error handling
 - Crash fixes
 - Documentation update
 - Include objcopy in environment if it exists
 - Add CI builds on travis-ci: OSX, ubuntu trusty
 - Fixed several memory errors
 - Extract enviornments with compile priority, not daemon priority
 - Handle spaces in the parameters following -MT
 - Handle -target -arch -c-isystem and -cxx-isystem (clang)
 - Handle NAT situations better
 - Add load control for preprocessing
 - Handle scheduler unable to reach remote machine
 - Make scheduler election algorithm handle multiple netnames

1.1rc2
 - -gsplit-dwarf support for debug fission (https://gcc.gnu.org/wiki/DebugFission)
 - bug fixes since 1.1rc1

1.1rc1
 - require capng
 - use system lzo, drop bundled minilzo
 - allow ICECC_VERSION file to start with a .
 - work with different executable names for docbook-to-man on different distributions
 - support color diagnostics if possible
 - fix several crashes
 - clean up and improve documentation
 - move icecc-create-env to bindir. 
 - Try to use only the best available scheduler
 - make daemon port configurable
 - USE_SCHEDULER now accepts host:port to change ports
 - force local compilation when required in more cases
 - detect some clang out of memory errors.
 - better support for FreeBSD
 - bump protocol version to 34
 - daemon requires chroot
 - some code refactoring for better maintainability