@@ -3,6 +3,12 @@ it depends critically on Linux' /proc/ structures and will fail
 at runtime until somebody figures out how to emulate the "ticks"
 form of process accounting in there.
 
+Required Libraries
+==================
+Note: The package name may vary by distro
+* libcap-ng-devel
+* libarchive-devel
+
 How to install icecream
 =======================
 
