@@ -14,6 +14,7 @@
  - Cygwin now works as a client
  - Don't expose Host endianness to network
  - General code cleanup
+ - require libarchive
  
 1.1
  - revert "Add load control for preprocessing"
